--- a/gb/24/2/5/n14174133.md
+++ b/gb/24/2/5/n14174133.md
@@ -1,70 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>23条重临 程翔：将国安法对法治冲击合理化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14174137-0230a26f51546b03b52f494ff9a8c690@1200x1200-600x400.jpg" />
-<h6>2003年7月1日，50万市民游行反对23条立法。资料图片。（Peter Parks/AFP via Getty Images）
+<h6>2003年7月1日，50万香港市民游行反对23条立法。（Peter Parks/AFP via Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2024年02月05日讯】（大纪元记者张瑛瑜香港报导）港府事隔21年重推《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC%E6%B3%95.md#1">基本法</a>》<ahref="https://github.com/19920513/djy/blob/master/gb/tag/23%E6%9D%A1.md#1">23条</a>立法。资深传媒人程翔分析，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>是将其“总体<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>观”加于香港，并用香港本地订立的法律，合理化《港区<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>》对香港法治的冲击。另外有2003年曾经参与50万人反23条立法大游行的市民指，今次不会再发声，因为预计要付出的代价太大。</p>
-<p>程翔2日在新唐人电视台节目《菁英论坛》指出，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>对香港法治有三大冲击，包括“无罪推定”、“程序公义”、“本地法律不延伸至境外”的普通法原则。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/23%E6%9D%A1.md#1">23条</a>立法经常被外界批评，是要将上述不合理的地方“都一一合理化”。</p>
+	<p>【大纪元2024年02月05日讯】（大纪元记者张瑛瑜香港报导）港府事隔21年重推《基本法》23条立法。资深传媒人程翔分析，中共是将其“总体国家安全观”强加于香港，并用香港本地订立的法律，合理化《港区国安法》对香港法治的冲击。另外有2003年曾经参与50万人反23条立法大游行的市民指，今次不会再发声，因为预计要付出的代价太大。</p>
+<p>程翔2日在新唐人电视台节目《菁英论坛》指出，国安法对香港法治有三大冲击，包括“无罪推定”、“程序公义”、“本地法律不延伸至境外”的普通法原则。23条立法经常被外界批评，是要将上述不合理的地方“都一一合理化”。</p>
 <p>港府表明23条立法是补上国安法执行过程中的“短板”，程指出，国安法的缺失其中一个明显的在于保释问题，本来按“无罪推定”原则，被告有保释权，但是被国安法指控串谋勾结外国势力的壹传媒创办人黎智英，“还没有审之前就已经关了3年”，这种情况下，当局要通过法律“来解释为什么可以这样做”，于是要23条立法。</p>
 <p>另一原因是国安法涵盖4种罪（分裂国家、颠覆国家政权、恐怖活动以及勾结外部势力），建议中的23条立法涵盖国安法没有的7种罪（叛国、分裂国家、煽动叛乱、颠覆中央人民政府及窃取国家机密、禁止外国的政治性组织或团体在香港特区进行政治活动、禁止香港特区的政治性组织或团体与外国的政治性组织或团体建立联系），后者补足前者。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>强加<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8.md#1">国家安全</a>观于香港</h2>
-<p>程翔说，中共一直以来想做的事情，25年来一直想强化对香港的管治。2008年更有论调提出要建立香港“第二支管治队伍”，中共显然在那时夺取香港治权。</p>
+<h2>中共强加国家安全观于香港</h2>
+<p>程翔说，中共25年来一直想做的事情，就是强化对香港的管治。2008年更有论调提出要建立香港“第二支管治队伍”，中共显然在那时夺取香港治权。</p>
 <p>2008年，时任中联办研究部长曹二宝在1月出版的中共中央党校理论刊物《学习时报》发表一篇文章，谈及香港的管治队伍。他认为九七后，香港的管治权“一分为二”，产生两支管治队伍，一支是“香港特区建制队伍”，有高度自治权；另一支是“中央、内地从事香港工作的干部队伍”，负责涉港的全国性事务，是一个不干预特区自治事务的“政权力量”。就此，外界普遍忧虑中共管治香港政策有重大变化、出现第二个权力中心。</p>
-<p>程又表示，2019年反送中运动后，中共以“止暴制乱”为借口，2020年直接颁布国安法，强行夺回香港的治权，更“完善选举”，“把整个香港的政治生态、政治机构完全来一个大清洗”，全面夺回香港的治权。</p>
-<p>之后中共就要将自己的“国家安全观”强加于香港，《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%BA%E6%9C%AC%E6%B3%95.md#1">基本法</a>》23条提到的7宗罪，于中共的政权安全观中，仅属于“政治安全”。23条的咨询文件开首部分就提出习的“总体国家安全观”，并列出经济、文化、军事、太空、深海等22个范畴，中共于是以是次立法，将这些安全观念落实到法律中。</p>
-<h2>北京违23条自行立法承诺</h2>
+<p>程又表示，2019年反送中运动后，中共以“止暴制乱”为借口，2020年直接颁布国安法，强行夺回香港的治权，更以所谓“完善选举”为借口，“把整个香港的政治生态、政治机构完全来一个大清洗”，全面夺回香港的治权。</p>
+<p>之后中共就要将自己的“国家安全观”强加于香港，《基本法》23条提到的7宗罪，于中共的政权安全观中，仅属于“政治安全”。23条的咨询文件开首部分就提出习的“总体国家安全观”，并列出经济、文化、军事、太空、深海等22个范畴，中共于是以这次立法，将这些安全观念落实到法律中。</p>
+<h2>北京违反23条自行立法承诺</h2>
 <p>对于当初拟定《基本法》时，不订明香港要立即为国安立法的原因，程翔指，《基本法》是“小宪法”，23条涉及具体刑罚，放到宪法的大架构中有点不合适。</p>
 <p>另外当年提出国安概念时，中港两地的起草委员有不同意见。港方委员认为，中共将其执政地位都划为国安；但是西方、自由民主的地方没有这个概念。此外，香港希望在实施双普选后才立23条，但是北京想法相反。</p>
-<p>《基本法》订明，23条是香港自行立法。程回顾，2003年50万人上街，反对23条立法。北京在1999年，于国内取缔法轮功，并强迫香港也取缔。但是时任的律政司司长梁爱诗仍在接受记者采访时表示法轮功在港为合法团体，香港法律不能随便取缔；不过北京当局一定要单独立法，并为时任特首董建华设下限期，要他在第二任期内完成。程翔认为此完全违背23条“自行立法”的原则，“时间点、内容，都由北京来定”，引来港人很大不满。</p>
-<p>程翔指除了条例本身对港人自由的限制，当时港府23条立法只咨询3个月，时任保安局局长叶刘淑仪当时反问“唔通（难道）的士司机、酒楼侍应、麦当劳服务员会逐条同我讨论？”傲慢态度引来更多港人不满。</p>
-<p>他分析，现时香港“止暴制乱”、立法会生态亦已改变，港府咨询一个月就是想急忙通过。过去20年当局知道立法会不在其牢牢控制下，“这个法怎么立都立不过的”，但是现时立法会的“一丁点反抗力量”已经被消灭，故重推立法。</p>
-<h2>扩大战争定义为出动军队铺路</h2>
-<p>至于现时23条立法是否仍然针对法轮功？还是有其它忧虑？程翔分析，上述习近平的“总体安全观”，主要是应对中共面临的严重问题。</p>
-<p>他认为咨询文件中，“可以看出他怕的是什么”，例如定义“叛国”时就“加辣”。原有香港法律中的叛逆罪，关于对英王发动“战争”的定义，在现时咨询文件中，被解释为不限于真正意义的战争，“而是包括指相当数目的人为某一般公共目的而发动的暴乱或暴动”，“涉及其它意图危害国家主权、统一或领土完整而使用武力或威胁使用武力的行为”。</p>
-<p>程翔指，按上述标准，2019年反送中运动就“已经发生一场内战了”。扩大战争定义，日后大陆或香港发生的动乱，就会当作“战争”处理，“到时候出动军队来镇压你就不要怪（责）了”。</p>
+<p>《基本法》订明，23条是香港自行立法。程翔回顾，2003年50万人上街，反对23条立法。而此时香港立法会生态已改变，港府咨询一个月就是想急忙通过。过去20年当局知道立法会不在其牢牢控制下，“这个法怎么立都立不过的”，但是现时立法会的“一丁点反抗力量”已经被消灭，故重推立法。</p>
 <h2>2003年上街反23市民不再发声：不被尊重</h2>
-<p>本报在港府公布咨询文件后，在旺角街头访问市民。从事社会服务业的市民A表示，“无什么好讲，他们说什么就什么”，认为表达意见作用有限。他2003年时认为23条立法影响港人权利、对政府亦无信心，故有游行反对，但相信现时市民都不会如当年般表达，“因为危险，付出的代价太大，所以宁愿不表达”、“肉随砧板上”。他并称，一个月咨询期实际上不需要，现时香港人的声音不被尊重。</p>
+<p>大纪元在港府公布咨询文件后，在旺角街头访问市民。从事社会服务业的市民A表示，“无什么好讲，他们说什么就什么”，认为表达意见作用有限。他2003年时认为23条立法影响港人权利、对政府亦无信心，故有游行反对，但相信现在市民已不会如当年般表达，“因为危险，付出的代价太大，所以宁愿不表达”、“肉随砧板上”。他并称，一个月咨询期实际上不需要，现在香港人的声音不被尊重。</p>
 <p>他表示“好担心”立法，“因为他的涵盖面非常之灵活，无论公众人士，或者一些艺术工作者，他想表达很多看法，都被说成是有危险，宁愿选择不表达”，并形容现时市民是“惶恐、自保的心态”，但是仍然未到绝望，希望当局将来在政策与市民自由之间能达至平衡。</p>
-<p>另一名2003年有上街反对23条的市民、现已退休的Peter表示，知道政府这次强推23条“势在必行”，形容当局对市民的“紧箍咒”只会越来越紧。被问到会否再参加游行，他反问“大家相信（政府所说）吗？”至于会否在咨询表达意见，他认为，23条立法会影响投资及经济发展他说，市民“21年前要表达已经表达了”。@</p>
+<p>另一名2003年有上街反对23条的市民、现已退休的Peter表示，知道政府这次强推23条“势在必行”，形容当局对市民的“紧箍咒”只会越来越紧。被问到会否再参加游行，他反问“大家相信（政府所说）吗？”至于会否在咨询表达意见，他认为，23条立法会影响投资及经济发展他说，市民“21年前要表达已经表达了”。</p>
 <p>责任编辑：陈玟绮</p>
 <p>&nbsp;</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171576.md#1">王赫：强推23条立法凸显中共末路狂奔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172002.md#1">港23条支持台湾恐属违法 陆委会：解释权在港 令人忧心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172399.md#1">【菁英论坛】习22个安全观 压入香港 23条</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">SONGMICS 6层大容量珠宝盒 带镜子（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：六合一多功能气炸锅 厨房好帮手 6折优惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/1/n14171576.md#1">王赫：强推23条立法凸显中共末路狂奔</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/2/n14172002.md#1">港23条支持台湾恐属违法 陆委会：解释权在港 令人忧心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/2/n14172315.md#1">【新闻大破解】揭中共对台国会渗透三部曲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/2/n14172399.md#1">【菁英论坛】习22个安全观 压入香港 23条</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/22/n10801600.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（2）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169186.md#1">【未解之谜】紫禁城风水（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14172980.md#1">芬兰男童死后再次转生为前世母亲的儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169157.md#1">拥抱自信 走向阳光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171693.md#1">【未解之谜】紫禁城风水探秘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172237.md#1">婚姻中“善恶有报”的真实故事（一）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172521.md#1">【车评】有“水平”的中型SUV 2024 Subaru Ascent Onyx</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172315.md#1">【新闻大破解】揭中共对台国会渗透三部曲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173067.md#1">【时事军事】开火了 B-1B点燃圣城旅军火库</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172571.md#1">徐客：中南海传敏感异动 蔡奇要职或被取代?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172642.md#1">A股暴跌 中共处罚六大评级机构 专家解析</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172430.md#1">美驻华使馆微博被洗版 中国股民向美求救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172371.md#1">迪丽热巴全英文对话超流利 标准口语获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172317.md#1">居港外籍男星河国荣烧炭身亡 终年58岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172833.md#1">王家卫《繁花》剧评：真娱乐假史实争奇斗艳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/3/n14172824.md#1">刚参演过《新闻女王》 56岁港星郑启泰骤逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172332.md#1">郑爽遭债主爆料 超时工作1天获酬220万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14140728.md#1">毛囊好才不脱发！中医公开护发秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14159956.md#1">哪些水果对心脏好？中医推荐4种超级水果?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171133.md#1">立春回味节气文明  迎春养生就吃这一盘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170693.md#1">逆龄20岁？哈佛教授抗老秘诀：NMN营养素</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173178.md#1">专家透露 何时入住旅馆可获得免费升等</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/5/n14174133.htm">23条重临 程翔：将国安法对法治冲击合理化</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/5/n14174133.htm">23条重临 程翔：将国安法对法治冲击合理化</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
