--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?zfeccqg#1" target="_blank">首页</a> | <a href="https://dlp02mn13eakq.cloudfront.net/1?qitblb" target="_blank">动态网</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/2?quyxkhya" target="_blank">大纪元</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/4?ikusgemf" target="_blank">看中国</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/pHh5q?jpsrz" target="_blank">新生网</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/tktpt?cnqbkkqcn" target="_blank">阿波罗网</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/Mjpvu?rogyryhau" target="_blank">干净世界</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/10?wpgiq" target="_blank">退党服务</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/Rffqf?krrmao" target="_blank">明慧广播</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/nw9Vn?wwtjt" target="_blank">传奇时代</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/AF9AG?eigebc" target="_blank">新境界影视</a> | <a href="https://dol9bue5bysdj.cloudfront.net/zqMQA?xmbis" target="_blank">文昭谈论</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/7?rsxmojhh" target="_blank">明慧</a></p><p><a href="https://dlvlk7o3qgp9v.cloudfront.net/9?dquxrr" target="_blank">大法</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/3?kipjjdj" target="_blank">新唐人</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/obAhT?alvsmhlie" target="_blank">人民报</a> | <a href="https://dep6yudto3kbo.cloudfront.net/xXNHu?aqfafw" target="_blank">放光明</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/5?gusop" target="_blank">新纪元</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/6?lskfdgn" target="_blank">希望之声</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/11?bizpec" target="_blank">无界网络</a> | <a href="https://doyvntponycdh.cloudfront.net/Pueji?fkevaihzs" target="_blank">追查国际</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/16?llmukewh" target="_blank">明慧之窗</a> | <a href="https://d337p4rc38c0de.cloudfront.net/LdvzZ?uzrfon" target="_blank">细语人生</a> | <a href="https://dlp02mn13eakq.cloudfront.net/fBn3r?nopvjn" target="_blank">新世纪影视</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/PUWMb?deaxbxesj" target="_blank">江峰时刻</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/8?juwoqri" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ukxhbcvb#1" target="_blank">首页</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/1?jqoifc" target="_blank">动态网</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/2?uoizu" target="_blank">大纪元</a> | <a href="https://d78f5frq5siq8.cloudfront.net/4?lahqyxs" target="_blank">看中国</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/pHh5q?nbcnddkkw" target="_blank">新生网</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/tktpt?srnbpk" target="_blank">阿波罗网</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/Mjpvu?mhmazb" target="_blank">干净世界</a> | <a href="https://doqmgyop4u892.cloudfront.net/10?glrmng" target="_blank">退党服务</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/Rffqf?wyeetvt" target="_blank">明慧广播</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/nw9Vn?muvmm" target="_blank">传奇时代</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/AF9AG?jokmiy" target="_blank">新境界影视</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/zqMQA?zeyjjua" target="_blank">文昭谈论</a> | <a href="https://d3vg08phoazui6.cloudfront.net/7?fmxmseiu" target="_blank">明慧</a></p><p><a href="https://d2wf95os3tobj4.cloudfront.net/9?wydjus" target="_blank">大法</a> | <a href="https://d14a0yccee2yym.cloudfront.net/3?oitbt" target="_blank">新唐人</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/obAhT?wntsvi" target="_blank">人民报</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/xXNHu?vypvsn" target="_blank">放光明</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/5?qvziymf" target="_blank">新纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/6?gxcqrvdpa" target="_blank">希望之声</a> | <a href="https://dme0bxbvomkno.cloudfront.net/11?inyaxae" target="_blank">无界网络</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/Pueji?tepyfey" target="_blank">追查国际</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/16?vcbzwcy" target="_blank">明慧之窗</a> | <a href="https://d3abchfok6e2j.cloudfront.net/LdvzZ?agnocllax" target="_blank">细语人生</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/fBn3r?halviqm" target="_blank">新世纪影视</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/PUWMb?mcjrebste" target="_blank">江峰时刻</a> | <a href="https://d265ujbtchne9r.cloudfront.net/8?tvrkpx" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042965-china-germany-shipping-business-1200x800-320x200.jpg"><p align="center">分析：中共出口型经济无法持续 内需难提振</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1" title="分析：中共出口型经济无法持续 内需难提振""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042965-china-germany-shipping-business-1200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307578.md#1" title="诺奖得主尤努斯正式掌管孟加拉国临时政府""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307628-GettyImages-2165353630-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307349.md#1" title="盗窃倒卖数千具尸体 头号央企卷入""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307368-9957789201cf0a185ec1be14d85209b7-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307126.md#1" title="大陆现3反常现象 制造业萎缩 工人维权案增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/11/id14116450-GettyImages-1246125910-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307664.md#1">舆论风波后首回应 张继科微博被景甜取关</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307671.md#1">加州“奶奶房”建设潮无助经适房缺口</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1">分析：中共出口型经济无法持续 内需难提振</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1">盗卖数千尸体案 涉案企业实控者背景曝光</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307723.md#1">加州地震频发 一应用程序助人提前收警报</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307664.md#1">舆论风波后首回应 张继科微博被景甜取关</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307671.md#1">加州“奶奶房”建设潮无助经适房缺口</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1">分析：中共出口型经济无法持续 内需难提振</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1">盗卖数千尸体案 涉案企业实控者背景曝光</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307029.md#1">【新闻大破解】美股反转？联准会与华尔街博弈</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307655.md#1">因应经济压力 洛杉矶华人发展美容美发副业</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307611.md#1">新研究：喝瓶装水可能会导致血压升高</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306432.md#1">杭州一护士疑与医生有染 丈夫自杀 评论区炸锅</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302223.md#1">揭中共暴力逼迫法轮功学员放弃修炼的伎俩（二）</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304140.md#1">Temu惹怒卖家引关注 跨境电商争议不断的背后</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304570.md#1">中共社科院4名学部委员13名研究员接连病亡</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2oa2t1hbllzrh.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2oa2t1hbllzrh.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,022</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1jay1uxpvlajh.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1jay1uxpvlajh.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,022</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 434,183,599 人
+!共 434,184,288 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306810.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14306841-046090fbba23ad3b884d0493b2015d7f-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306810.md#1">课堂谈白纸运动遭威胁 市骨干教师逃离中国</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306371.md#1">贵州安顺强推火葬进村抢尸 遭居民激烈反抗</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302224.md#1">揭中共暴力逼迫法轮功学员放弃修炼的伎俩（三）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305684.md#1">湖南青年挂反共标语疑被捕 海外华人声援</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305617.md#1">长老获刑5年 贵阳基督教会谴责中共打压信仰</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304296.md#1">制止中共活摘器官 美参院推法案 多州立法</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307551.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/07/id14291110-GettyImages-1676997582-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307551.md#1">自驾出租车增加 武汉网约车司机焦虑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307383.md#1">美中芯片战下 中芯国际第二季获利大幅下滑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307477.md#1">中国需求疲软 资生堂股价创37年来最大跌幅</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307320.md#1">中国二手房价续下跌 卖家不得不割肉离场</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307330.md#1">美国超越中国 成为德国最大贸易伙伴</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307229.md#1">中国钢铁业困境加深 廉价商品冲击国际</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307617.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273065-GettyImages-2157553384-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307617.md#1">中国持续高温 官方瞒报中暑死亡人数</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307528.md#1">中粮集团原副总周政被提起公诉 多人被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307521.md#1">河南周口市长吉建军任上落马 7天前还调研</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307441.md#1">上海国资委前主任白廷辉受贿案一审开庭</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307277.md#1">马治薇涉受中共资助参选台湾立委 遭判8个月</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307253.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307306-10844bcc891c708cb03b2f5f133eb496-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307253.md#1">海南一架小型飞机坠毁 机身印有“安防国际”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306983.md#1">云南村民被气象炮弹砸断腿 已截肢仍昏迷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306680.md#1">吉林25座大中型水库同时泄洪 民众：酿洪灾</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306509.md#1">八月飘雪 乌鲁木齐县发布暴雪预警</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306430.md#1">珠海一居民楼倒塌至少3死 疑煤气爆炸所致</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305937.md#1">陕西高层住宅起火有人坠楼 当地政府封锁消息</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307626-1-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307613.md#1">盗卖数千尸体案 涉案企业实控者背景曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307309.md#1">甘肃夫妻遭银行职员殴打 缝合几十针</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307374.md#1">奇瑞汽车要求3个员工干5个人的活 引发关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307141.md#1">勾结大陆人蛇集团伪造台湾护照 7人遭起诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307227.md#1">三退声明精选（2024/08/07）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305356.md#1">拒当敛财工具遭打击 山西官员实名举报两领导</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/08/id14302427-GettyImages-2154577153-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302373.md#1">新剧中挑战农妇角色 杨幂的造型引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300362.md#1">巴黎奥运 中国女篮首战失利败给西班牙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/28/n14299945.md#1">“北京中轴线”申遗成功 含毛纪念堂引争议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/27/n14299901.md#1">为玩“烟卡游戏” 四川六童偷六万元高档香烟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297646.md#1">陕师大教师给女生发不雅照？9年前被举报无果</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294871.md#1">深圳一知名中学倒闭 千余师生被赶出学校</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284768.md#1">前高官：中共恐怖治国假话盛行 官员难善终</a><br>
