--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -123,7 +123,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/1/n10823173.md#1" target="_blank">【还原史实】中共“大跃进” 四千万中国人活活饿死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
