--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -123,7 +123,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
