--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -122,7 +122,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
